more documentation in the vignette

--- a/vignettes/ProteomicsAnnotationHubData.Rmd
+++ b/vignettes/ProteomicsAnnotationHubData.Rmd
@@ -2,7 +2,7 @@
 title: "Proteomics Data in Annotation Hub"
 output:
   BiocStyle::html_document:
-     toc: false
+     toc: true
      toc_depth: 1
 vignette: >
   % \VignetteIndexEntry{Proteomics Data in Annotation Hub}
@@ -178,11 +178,12 @@ function prepares a PAHD DCF template.
 writePahdTemplate("")
 ```
 
-## Data and metadata
+## Required data and metadata
 
-This section describes how `ProteomicsAnnotationHubData` are described
-and generated. See also the `r Biocpkg("AnnotationHub")` package for
-additional documentation. Below is an excerpt of `PXD000001.dcf` 
+This section describes how `ProteomicsAnnotationHubData` metadata
+ojects are described and generated. See also the `r
+Biocpkg("AnnotationHub")` package for additional documentation. Below
+is an excerpt of `PXD000001.dcf`
 
 ```{r PXD000001.dcf, echo=FALSE}
 f <- list.files(system.file("extdata", package = "ProteomicsAnnotationHubData"),
@@ -211,7 +212,8 @@ data class the file will be converted to.
 
 ### Recipe {-}
 
-The function that converts the data into its R data class.
+The function that converts the data into its R data class. See below
+for further details.
 
 ### RDataPath {-}
 
@@ -303,21 +305,23 @@ provider. Multiple scenarios are can occur:
     files are not converted into objects *per se*, but an accessor
     object is produced to extract data directly from the data file.
 
-- `Location_Prefix` is either `.amazonBaseUrl`, when the file to be
-  loaded/read by the user exists on the AH Amazon S3 instance, or
-  `.prideBaseUrl` when it lives on the PRIDE ftp server.
+- `Location_Prefix` is either `S3`, when the file to be loaded/read by
+  the user exists on the AH Amazon S3 instance, or `PRIDE` when it
+  lives on the PRIDE ftp server. (These will be replaced by
+  `.amazonBaseUrl` and `.prideBaseUrl` respectively during data
+  preparation.)
 
 - `SourceUrl` is the full location of the original file. This is
   generally the third-party server, but not necessarily.
 
 - `RDataPath` is the path and filename of the file to be read into R
   and provided to the user. This field does not contain the server
-  address `.prideBaseUrl` or `.amazonBaseUrl` (see `Location_Prefix`).
+  address (`.prideBaseUrl`/`PRIDE` or `.amazonBaseUrl`/`S3`, see
+  `Location_Prefix`).
 
 - The metadata list, used to create the `AnnotationHubResources` also
   uses a `SourceBaseUrl`, which is the full url minus file name (that
   is in `File`) of the original file. Used to construct `SourceUrl`.
-
 
 ### Examples {-}
 
@@ -328,8 +332,8 @@ Refering back to the scenarios described above
 Files that are downloaded from the third-party resource, in our case
 PRIDE, and loaded directly into R without any pre-processing:
 
-- the `Recipe` argument **must be** `NA`.
-- the `Location_Prefix` should be the `.prideBaseUrl`.
+- the `Recipe` argument **must be** `NA`. Leave empty in the DCF file.
+- the `Location_Prefix` should be `PRIDE` (`.prideBaseUrl`).
 - the `RDdataPath` should be `sub(.prideBaseUrl, "", SourceUrl)`
 - the `SourceUrl` should be the actual full url on third-party server.
 
@@ -409,14 +413,86 @@ RDataPath: pride/data/archive/2012/03/PXD000001/TMT_Erwinia_1uLSike_Top10HCD_iso
 SourceUrl: http://s3.amazonaws.com/annotationhub/pride/data/archive/2012/03/PXD000001/TMT_Erwinia_1uLSike_Top10HCD_isol2_45stepped_60min_01-20141210.mzid
 ```
 
-### Preparer functions {-}
+## Data preparation script
+
+The fully completed DCF files are added to `r
+Biocpkg("ProteomicsAnnotationHubData")`'s `extdata` directory and
+named accordin to the dataset's identifier using the `dcf` extension.
+
+Once the above metadata is prepared in one or multiple DCF files,
+these can be read into R with `PAHD`. Data preparation scripts are
+added to If you have new types of data, please contact `r
+Biocpkg("ProteomicsAnnotationHubData")`'s maintainer.  `r
+Biocpkg("ProteomicsAnnotationHubData")`'s `scripts` directory. Below
+are the first four lines of `PXD000001.R`:
+
+
+```{r PXD000001.R, echo=FALSE}
+f <- list.files(system.file("scripts", package = "ProteomicsAnnotationHubData"),
+                full.names = TRUE, pattern = "PXD000001.R")
+cat(readLines(f)[1:4], sep = "\n")
+```
+
+The rest of the preparation script calls various functions from the
+`r Biocpkg("AnnotationHubData")` package to create valid
+`AnnotationHubMetadata` instances. At the end, it is important to
+serialise the metadata objects in the `extdata` directory, as these
+will be used in the unit tests described below.
+
+## Preparer functions {-}
 
 Preparer functions and recipes are only required if the `rda` file is
 prepared on the `AnnotationHub` Amazon S3 instance.
 
-## Preparing data
+Below are the relevant functions for `mzRpwiz`, `mzRIdent`, `MSnSet`
+and `AAStringSet` resources. These are defined in `r
+Biocpkg("AnnotationHub")` `/R/AnnotationHubProteomicsResource-class.R`
+file. 
 
-See `inst/scripts/PXD000001.R`.
+```{r, eval=FALSE}
+setClass("mzRpwizResource", contains="AnnotationHubResource")
+setMethod(".get1", "mzRpwizResource",
+    function(x, ...) 
+{
+    .require("mzR")
+    yy <- cache(.hub(x))
+    mzR::openMSfile(yy, backend = "pwiz")
+})
+```
+
+```{r, eval=FALSE}
+setClass("mzRidentResource", contains="AnnotationHubResource")
+setMethod(".get1", "mzRidentResource",
+    function(x, ...) 
+{
+    .require("mzR")
+    yy <- cache(.hub(x))
+    mzR::openIDfile(yy)
+})
+```
+```{r, eval=FALSE}
+setClass("MSnSetResource", contains="RdaResource")
+setMethod(".get1", "MSnSetResource",
+    function(x, ...) 
+{
+    .require("MSnbase")
+    callNextMethod(x, ...) 
+})
+```
+```{r, eval=FALSE}
+setClass("AAStringSetResource", contains="AnnotationHubResource")
+setMethod(".get1", "AAStringSetResource",
+     function(x, ...) 
+{
+    .require("Biostrings")
+    yy <- cache(.hub(x))
+    Biostrings::readAAStringSet(yy)
+})
+```
+
+If you have new types of data, please contact `r
+Biocpkg("ProteomicsAnnotationHubData")`'s maintainer.
+
 
 ## Testing
 
