--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,6 @@
+CHANGES IN VERSION 1.1.3
+------------------------
+
 CHANGES IN VERSION 1.1.2
 ------------------------
  o Major rewrite of the data preparation, now relying on simple dcf
