--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,7 @@
+CHANGES IN VERSION 1.3.3
+------------------------
+ o Fix formatting in vignette <2016-06-26 Sun>
+
 CHANGES IN VERSION 1.1.2
 ------------------------
  o Major rewrite of the data preparation, now relying on simple dcf
